<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/rjhs_translate_message"
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rjhs_translate_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rjhs_internal_str_translation_offer_help_input_email"
        app:layout_constraintTop_toBottomOf="@id/rjhs_translate_message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rjhs_translate_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rjhs_translate_language_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rjhs_internal_str_translation_offer_help_input_language"
        app:layout_constraintTop_toBottomOf="@id/rjhs_translate_email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rjhs_translate_language_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/rjhs_str_language" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>